--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<tr bgcolor="f2f2f2">
 			<td>
 				<p>
-					<font> Hello there - for now this is what we have. Come back in a while. </font>
+					<font> Hello there - for now this is what we have. Come back in a while. <br>
+					Cheers - Flo</font> 
 				</p>
 			</td>	
 		</tr>
