--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Homepage: BeYourOwn</title>
+<title>BeYourOwn Dev Site</title>
 
 </head>
 <body>
@@ -12,10 +12,9 @@
 		<tr bgcolor="f2f2f2">
 			<td>
 				<p>
-					<font> Hello there - for now this is what we have. Come back in a while. <br>
-					Cheers - Flo <br>
-					This is in the unospazio-patch-1 which is a branch 
-					</font> 
+				<h1>Hello there!</h1> <br>
+				Welcome to the dev site. <br>
+				Work in progress.<br>
 				</p>
 			</td>	
 		</tr>
