--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 	<table width ="100%" height="100%" border="0" bordercolor="#000000" bgcolor="ffffff">
 		<tr bgcolor="f2f2f2">
 			<td>
+				<img src="ReworkedLogo1.png" alt="Logo" align="left">
+			</td>
+			<td>
 				<p>
-				<h1>Hello there!</h1> <br>
-				Welcome to the dev site. <br>
-				Work in progress.<br>
+				<h1>Hello there!</h1><br>
+				Domain is registered - simple hello world static page.<br>
 				</p>
-			</td>	
+			</td>
+			
 		</tr>
 	</table>
 </body>
