--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 </head>
 <body>
 	<table width ="100%" height="100%" border="0" bordercolor="#000000" bgcolor="ffffff">
-		<tr bgcolor="f2f2f2">
+		<tr bgcolor="#f2f2f2">
 			<td>
 				<img src="ReworkedLogo1.png" alt="Logo" align="left">
 			</td>
+		</tr>
+		<tr bgcolor="#ebe5d9">
 			<td>
-				<p>
-				<h1>Hello there!</h1><br>
-				Domain is registered - simple hello world static page.<br>
-				</p>
+				<p> 
+					<font color="#89aebc">
+						<h1>Hello there!</h1><br>
+						Domain is registered - simple hello world static page.<br>
+					</font>
+				</p> 
 			</td>
 			
 		</tr>
