--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 	<table width ="100%" height="100%" border="0" bordercolor="#000000" bgcolor="ffffff">
 		<tr bgcolor="#f2f2f2">
 			<td>
-				<img src="ReworkedLogo1.png" alt="Logo" align="left">
+				<img src="ReworkedLogo1.png" alt="Logo" align="centre">
 			</td>
 		</tr>
 		<tr bgcolor="#ebe5d9">
 			<td>
 				<p> 
-					<font color="#89aebc">
-						<h1>Hello there!</h1><br>
-						Domain is registered - simple hello world static page.<br>
+					<font color="#51556b">
+						<center><h1>Hello there!</h1></center><br>
+					</font>
+					<font color="#d5c5b5">
+						<center>Domain is registered - simple hello world static page.</center><br>
 					</font>
 				</p> 
 			</td>
