--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
 		</tr>
 		<tr bgcolor="#ebe5d9">
 			<td>
-				<p> 
+				<p style="font-family:Klee One"> 
 					<font color="#51556b">
 						<center><h1>Hello there!</h1></center><br>
 					</font>
-					<font color="#d5c5b5">
-						<center>Domain is registered - simple hello world static page.</center><br>
+					<font color="#51556b">
+						<center>
+						<p style="font-family:Klee One">
+							Domain is registered - simple hello world static page.
+						</p>
+						</center>
+						
+						<br>
 					</font>
 				</p> 
 			</td>
