--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<font color="#51556b">
 						<center>
 						<p style="font-family:Klee One">
-							Domain is registered - simple hello world static page.
+							<h2>Domain is registered - simple hello world static page.</h2>
 						</p>
 						</center>
 						
@@ -34,7 +34,7 @@
 		</tr>
 		<tr bgcolor="#565a6c">
 			<td>
-				<p style="font-family:Klee One"><font color="#ffffff">25-Sep-2022</font></p>
+				<p style="font-family:Klee One"><font color="#ffffff"><h3>25-Sep-2022</h3></font></p>
 			</td>
 		</tr>
 	</table>
