--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 		</tr>
 		<tr bgcolor="#565a6c">
 			<td>
-				<p style="font-family:Klee One"><font color="#ffffff"><h3>25-Sep-2022</h3></font></p>
+				<p style="font-family:Klee One">
+					<font color="#ffffff">
+						<center><h3>25-Sep-2022</h3></center>
+					</font>
+				</p>
 			</td>
 		</tr>
 	</table>
