--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 		</tr>
 		<tr bgcolor="#ebe5d9">
 			<td>
-				<p style="font-family:Klee One"> 
-					<font color="#51556b">
+				<p> 
+					<font color="#51556b" family="Klee One">
 						<center><h1>Hello there!</h1></center><br>
 					</font>
-					<font color="#51556b">
+					<font color="#51556b" family="Klee One">
 						<center>
-						<p style="font-family:Klee One">
-							<h2>Domain is registered - simple hello world static page.</h2>
+						<p>
+							Domain is registered - simple hello world static page.
 						</p>
 						</center>
 						
@@ -34,11 +34,11 @@
 		</tr>
 		<tr bgcolor="#565a6c">
 			<td>
-				<p style="font-family:Klee One">
-					<font color="#ffffff">
-						<center><h3>25-Sep-2022</h3></center>
+				<center><p>
+					<font color="#ffffff" family="Klee One">
+						Released on 25-Sep-2022
 					</font>
-				</p>
+				</p></center>
 			</td>
 		</tr>
 	</table>
