--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<font color="#51556b" family="Klee One">
 						<center>
 						<p>
-							Domain is registered - simple hello world static page.
+							Domain is registered.
 						</p>
 						</center>
 						
@@ -36,7 +36,7 @@
 			<td>
 				<center><p>
 					<font color="#ffffff" family="Klee One">
-						Released on 25-Sep-2022
+						Temporary page up on 25-Sep-2022
 					</font>
 				</p></center>
 			</td>
