--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 					<font color="#51556b" family="Klee One">
 						<center>
 						<p>
-							Domain is registered.
+							Domain is registered. <br>
+							Website under construction. <br>
+							Visit next time <br>
 						</p>
 						</center>
 						
