--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>BeYourOwn Dev Site</title>
+<title>Homepage: BeYourOwn</title>
+
+	<link rel="preconnect" href="https://fonts.googleapis.com"> 
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+	<link href="https://fonts.googleapis.com/css2?family=Klee+One&display=swap" rel="stylesheet">
+	<link href="css/CY_template8.css" rel="stylesheet" type="text/css">
+	<link href="css/bootstrap-4.4.1.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
+
 	<table width ="100%" height="100%" border="0" bordercolor="#000000" bgcolor="ffffff">
 		<tr bgcolor="#f2f2f2">
 			<td>
@@ -25,7 +32,7 @@
 						<p>
 							Domain is registered. <br>
 							Website under construction. <br>
-							Visit next time <br>
+							Visit next time.<br>
 						</p>
 						</center>
 						
