--- a/index.html
+++ b/index.html
@@ -14,42 +14,41 @@
 
 </head>
 <body>
-
-	<table width ="100%" height="100%" border="0" bordercolor="#000000" bgcolor="ffffff">
-		<tr bgcolor="#f2f2f2">
-			<td>
-				<img src="ReworkedLogo1.png" alt="Logo" align="centre">
-			</td>
-		</tr>
-		<tr bgcolor="#ebe5d9">
-			<td>
-				<p> 
-					<font color="#51556b" family="Klee One">
-						<center><h1>Hello there!</h1></center><br>
-					</font>
-					<font color="#51556b" family="Klee One">
-						<center>
-						<p>
-							Domain is registered. <br>
-							Website under construction. <br>
-							Visit next time.<br>
-						</p>
-						</center>
-						
-						<br>
-					</font>
-					</p> 
-			</td>
-		</tr>
-		<tr bgcolor="#565a6c">
-			<td>
-				<center><p>
-					<font color="#ffffff" family="Klee One">
-						Temporary page up on 25-Sep-2022
-					</font>
-				</p></center>
-			</td>
-		</tr>
-	</table>
+<table width ="100%" height="100%" border="0" bordercolor="#000000" bgcolor="ffffff">
+	<tr bgcolor="f2f2f2">
+		<td>
+			<table width ="100%" height="100%" border="0" bordercolor="#F70004">
+				<tr>
+					<td valign="top">
+						<a href="index.html" target="_self"><img src="images/Logo/ReworkedLogo1.png" alt="Logo" align="left"></a>
+					</td>
+					<td valign="top" align="right">
+						<a href="jp_index.html" target="_self" class="buttonLang">日本語</a>
+					</td>
+				</tr>
+			</table>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<p class="hero_footer">Hello there!</p>
+			<p class="hero_footer">Domain name registered for now</p>
+			<p class="hero_footer">Website under construction</p>
+			<p class="hero_footer">Visit next time.</p>
+		</td>
+	</tr>
+	<tr bgcolor="#565a6c">
+		<td>
+			<table width="100%" height="100%" border="0" bordercolor="#565a6c">
+				<tr>
+					<td>
+						<!-- Copyrights Section -->
+  						<div class="copyright">&copy;&nbsp;25 September 2022</div>
+					</td>
+				</tr>
+			</table>
+		</td>
+	</tr>
+</table>	
 </body>
 </html>
