--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			</table>
 		</td>
 	</tr>
-	<tr>
+	<tr bgcolor="#888a99">
 		<td>
 			<p class="hero_footer">Hello there!</p>
 			<p class="hero_footer">Domain name registered for now</p>
