--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <table width ="100%" height="100%" border="0" bordercolor="#000000" bgcolor="ffffff">
-	<tr bgcolor="f2f2f2">
+	<tr bgcolor="#f2f2f2">
 		<td>
 			<table width ="100%" height="100%" border="0" bordercolor="#F70004">
 				<tr>
