--- a/index.html
+++ b/index.html
@@ -30,20 +30,25 @@
 		</td>
 	</tr>
 	<tr bgcolor="#888a99">
-		<td>
+		<td align="center">
 			<p class="hero_footer">Hello there!</p>
-			<p class="hero_footer">Domain name registered for now</p>
-			<p class="hero_footer">Website under construction</p>
+			<p class="hero_footer">Domain name registered.</p>
+			<p class="hero_footer">Website under construction.</p>
 			<p class="hero_footer">Visit next time.</p>
 		</td>
 	</tr>
+	<tr rowspan ="50">
+		<td>
+			
+		</td>
+	</tr>	
 	<tr bgcolor="#565a6c">
 		<td>
 			<table width="100%" height="100%" border="0" bordercolor="#565a6c">
 				<tr>
 					<td>
 						<!-- Copyrights Section -->
-  						<div class="copyright">&copy;&nbsp;25 September 2022</div>
+  						<div class="copyright"> 25 September 2022</div>
 					</td>
 				</tr>
 			</table>
