--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
 		</td>
 	</tr>
 	<tr bgcolor="#888a99">
-		<td align="center">
+		<td align="center"> <center>
 			<p class="hero_footer">Hello there!</p>
 			<p class="hero_footer">Domain name registered.</p>
 			<p class="hero_footer">Website under construction.</p>
-			<p class="hero_footer">Visit next time.</p>
+			<p class="hero_footer">Visit next time.</p> </center>
 		</td>
 	</tr>
-	<tr rowspan ="50">
+	<tr>
 		<td>
-			
+			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		</td>
 	</tr>	
 	<tr bgcolor="#565a6c">
