--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<a href="index.html" target="_self"><img src="images/logo/ReworkedLogo1.png" alt="Logo" align="left"></a>
 					</td>
 					<td valign="top" align="right">
-						<a href="jp_index.html" target="_self" class="buttonLang">日本語</a>
+						<a href="index.html" target="_self" class="buttonLang">日本語</a>
 					</td>
 				</tr>
 			</table>
