--- a/index.html
+++ b/index.html
@@ -22,38 +22,17 @@
 					<td valign="top">
 						<a href="index.html" target="_self"><img src="images/logo/ReworkedLogo1.png" alt="Logo" align="left"></a>
 					</td>
-					<td valign="top" align="right">
-						<a href="index.html" target="_self" class="buttonLang">日本語</a>
-					</td>
 				</tr>
 			</table>
-		</td>
-	</tr>
-	<tr bgcolor="#888a99">
-		<td align="center"> <center>
-			<p class="hero_footer">Hello there!</p>
-			<p class="hero_footer">Domain name registered.</p>
-			<p class="hero_footer">Website under construction.</p>
-			<p class="hero_footer">Visit next time.</p> </center>
 		</td>
 	</tr>
 	<tr>
-		<td>
-			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-		</td>
-	</tr>	
-	<tr bgcolor="#565a6c">
-		<td>
-			<table width="100%" height="100%" border="0" bordercolor="#565a6c">
-				<tr>
-					<td>
-						<!-- Copyrights Section -->
-  						<div class="copyright"> 25 September 2022</div>
-					</td>
-				</tr>
-			</table>
+		<td align="center"> <center>
+			<img src="images/UnderConstruction.png" alt="Site Under Construction" align="center">
+			<!-- <p class="hero_footer">Hello there!</p> -->
 		</td>
 	</tr>
+	
 </table>	
 </body>
 </html>
