--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</tr>
 	<tr>
 		<td align="center"> <center>
-			<img src="images/UnderConstruction.png" alt="Site Under Construction" align="center">
+			<img src="icons/UnderConstruction.png" alt="Site Under Construction" align="center">
 			<!-- <p class="hero_footer">Hello there!</p> -->
 		</td>
 	</tr>
