--- a/index.html
+++ b/index.html
@@ -17,22 +17,9 @@
 <table width ="100%" height="100%" border="0" bordercolor="#000000" bgcolor="ffffff">
 	<tr bgcolor="#f2f2f2">
 		<td>
-			<table width ="100%" height="100%" border="0" bordercolor="#F70004">
-				<tr>
-					<td valign="top">
-						<a href="index.html" target="_self"><img src="images/logo/ReworkedLogo1.png" alt="Logo" align="left"></a>
-					</td>
-				</tr>
-			</table>
+			<center><img src="icons/UnderConstruction.png" alt="Site Under Construction" align="center">
 		</td>
 	</tr>
-	<tr>
-		<td align="center"> <center>
-			<img src="icons/UnderConstruction.png" alt="Site Under Construction" align="center">
-			<!-- <p class="hero_footer">Hello there!</p> -->
-		</td>
-	</tr>
-	
 </table>	
 </body>
 </html>
