--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 </head>
 <body>
-<table width ="100%" height="100%" border="0" bordercolor="#000000" bgcolor="ffffff">
-	<tr bgcolor="#f2f2f2">
+<table width ="100%" height="100%" border="0" bordercolor="#000000" bgcolor="#ffffff">
+	<tr>
 		<td>
-			<center><img src="icons/UnderConstruction.png" alt="Site Under Construction" align="center">
+			<center><img src="icons/UnderConstruction.png" alt="Site Under Construction" align="center"></center>
 		</td>
 	</tr>
 </table>	
