--- a/index.html
+++ b/index.html
@@ -5,16 +5,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Homepage: BeYourOwn</title>
-
-	<link rel="preconnect" href="https://fonts.googleapis.com"> 
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-	<link href="https://fonts.googleapis.com/css2?family=Klee+One&display=swap" rel="stylesheet">
-	<link href="css/CY_template8.css" rel="stylesheet" type="text/css">
-	<link href="css/bootstrap-4.4.1.css" rel="stylesheet" type="text/css">
-
 </head>
 <body>
-<table width ="100%" height="100%" border="0" bordercolor="#000000" bgcolor="#ffffff">
+<table width ="100%" height="100%" border="0" bordercolor="#000000">
 	<tr>
 		<td>
 			<center><img src="icons/UnderConstruction.png" alt="Site Under Construction" align="center"></center>
