--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="css/CY_template8.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<table width ="100%" height="100%" border="0" bordercolor="#000000" bgcolor="#dbd6d2">
+<table width ="100%" height="100%" border="0" bordercolor="#000000" bgcolor="#ffffff">
 	<tr>
 		<td>
 			<center><img src="icons/UnderConstruction.png" alt="Site Under Construction" align="center"></center>
